Use `rake install` instead of explicit commands for Travis-ci
This allows testing to follow actual usage

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ rvm:
 - 2.0.0
 - 2.1.0
 language: ruby
-script: 'rake check && librarian-puppet install --verbose'
+script: 'rake check && rake install'
 gemfile: Gemfile
 sudo: false
